[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/CharacterDetail.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.0627451, 0.203922, 0.207843, 0.670588 )

[node name="CharacterDetail" type="Control"]
margin_left = 20.0
margin_top = 20.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = -2.0
margin_right = 303.0
margin_bottom = 92.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 295.0
margin_bottom = 82.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_right = 285.0
margin_bottom = 72.0

[node name="MoraleStatus" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 285.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MoraleStatus"]
margin_right = 64.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 7
size_flags_stretch_ratio = 0.3
text = "Morale"
align = 2
valign = 1

[node name="Progress" type="ProgressBar" parent="PanelContainer/MarginContainer/VBoxContainer/MoraleStatus"]
margin_left = 68.0
margin_right = 285.0
margin_bottom = 34.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="FearStatus" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 38.0
margin_right = 285.0
margin_bottom = 72.0
grow_horizontal = 0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/FearStatus"]
margin_right = 64.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 7
size_flags_stretch_ratio = 0.3
text = "Fear"
align = 2
valign = 1

[node name="Progress" type="ProgressBar" parent="PanelContainer/MarginContainer/VBoxContainer/FearStatus"]
margin_left = 68.0
margin_right = 285.0
margin_bottom = 34.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
